--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "author": "Ilya Bakirov",
   "license": "MIT",
   "dependencies": {
-    "@prisma/client": "^4.12.0",
+    "@prisma/client": "^5.0.0",
     "axios": "^0.21.4",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -30,11 +30,15 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.4.4",
+    "@typescript-eslint/parser": "^6.2.0",
+    "@zerollup/ts-transform-paths": "^1.7.18",
     "dotenv": "^16.0.3",
+    "eslint": "^8.45.0",
     "module": "^1.2.5",
     "nodemon": "^2.0.12",
-    "prisma": "^4.12.0",
+    "prisma": "^5.0.0",
     "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.6"
   }
 }
